--- a/Aperture/AndroidManifest.xml
+++ b/Aperture/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="co.arrow.settings.translation">
+    package="co.arrow.aperture.translation">
     <overlay
         android:isStatic="true"
         android:priority="600"
-        android:targetPackage="com.android.settings" />
+        android:targetPackage="org.lineageos.aperture" />
 </manifest>
